--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,7 @@ html, body {
 	overflow: 						hidden;
 	height: 						100%;
 	width: 							100%;
-	margin:							0;
+	padding: 						0px;
+	margin:							0px;
 	box-sizing: 					border-box;
 }
